objects/ASI_CRM_Promoter__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MobileNo__c</fullName>
        <label>Mobile No.</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_PromoterId__c</fullName>
        <label>Promoter Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_VNId__c</fullName>
        <label>VN ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Promoter</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_VN_Promoters</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_PromoterId__c</columns>
        <columns>ASI_CRM_VNId__c</columns>
        <columns>ASI_CRM_MobileNo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Promoter__c.ASI_CRM_VN_Promoter</value>
        </filters>
        <label>All VN Promoters</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_VN_all_User</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Promoter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promoters</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_VN_Promoter</fullName>
        <active>true</active>
        <label>VN Promoter</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>